# kvn-force

./: README.md
app/: .gitignore  CMakeLists.txt  res.qrc
app/res/configs/: config_singbox.json
app/src/: main.cpp  qml_register_manager.h  version.h.in
app/src/exceptions/: create_dir_exception.h  json_format_exception.h
app/src/gui_forms/: ASelectField.qml  ATextField.qml  About.qml  Add.qml  BottomPanel.qml  Connect.qml  DeleteDialog.qml  Main.qml  RoutingSettings.qml  RoutingSettingsRS.qml  ServerPicker.qml  ServerSettings.qml  SettingsForm.qml  Theme.qml  Toast.qml
app/src/servers/: server_info.cpp  servers_manager.cpp  servers_manager.h
app/src/settings/: settings.cpp  settings.h
app/src/system_tray/: system_tray.cpp  system_tray.h
app/src/utils/: enum_util.h  process_runner.cpp  process_runner.h
app/src/utils/http_client/: http_client.cpp  http_client.h
app/src/vpn/: message_type.h  vpn_desktop_service.cpp  vpn_desktop_service.h  vpn_factory.cpp  vpn_factory.h  vpn_linux.cpp  vpn_linux.h  vpn_manager.h
app/test/: CMakeLists.txt  q_string_test.cpp  server_test.cpp
common/: CMakeLists.txt
common/src/exceptions/: bad_url_format_exception.h  copy_config_exception.h  process_failed_exception.h  wrong_args_exception.h
common/src/logger/: logger.cpp  logger.h
common/src/server_info/: server_info.cpp  server_info.h
common/src/utils/: enum_util.h  process_runner.cpp  process_runner.h
common/src/utils/qthread/: base_thread.cpp  q_thread_exception.h
common/src/vpn/: abstract_vpn.h
service/: .gitignore  CMakeLists.txt  res.qrc
service/docs/service_requests_and_response_example/: connecting.response.json  start.request.json  stop.request.json
service/res/configs/: config_singbox.json  config_xray.json
service/src/: main.cpp
service/src/exceptions/: abstract_exception.h  delete_dir_exception.h  unsupported_protocol_exception.h
service/src/logger/: logger.h
service/src/message_server/: message_server.cpp  message_server.h  message_type.h
service/src/servers/: server_info.h
service/src/utils/qthread/: base_thread.h
service/src/vpn/: abstract_vpn.h  vpn_service.cpp  vpn_service.h  vpn_service_manager.cpp  vpn_service_manager.h
tools/: build.linux.debug.sh  build.linux.release.sh  build.windows.debug.bat  build.windows.release.bat
tools/installer/: build.bat  build.sh
tools/installer/config/: config.xml  control.js
tools/installer/linux_amd64/qtif/: build_qtif.sh
tools/installer/linux_amd64/qtif/config/: config.xml  control.js
tools/installer/linux_amd64/qtif/meta/: installscript.js  package.xml
tools/installer/meta/: installscript.js
tools/installer/service.linux/: KVNForce.service
tools/installer/service.windows/: KVNForceService.xml
tools/installer/windows_amd64/zip/: X2RayClientLight.lnk  XRayClientLightService.xml  build_zip.bat  install.bat  install_service.bat  start_service.bat  uninstall.bat  uninstall_service.bat
